logs/products.cachesetup.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/Extensions'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/i18n'...
Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/patch.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/patch.py", line 48
    raise ValueError, ('Trying to unwrap non-wrapped '
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CMFSquidTool/profiles'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/profiles/default'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/skins'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/skins/squid_tool'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/tests'...
Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/tests/test_connections.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/tests/test_connections.py", line 42
    print "Unexpected connection from the purge tool"
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/utils.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/utils.py", line 39
    print args[0]
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/CMFSquidTool/www'...
Listing './lib/python3.5/site-packages/Products/CacheSetup'...
Listing './lib/python3.5/site-packages/Products/CacheSetup/Extensions'...
Compiling './lib/python3.5/site-packages/Products/CacheSetup/Extensions/utils.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/Extensions/utils.py", line 49
    raise ValueError, 'Please add CMFSquidTool to your Products directory'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CacheSetup/content'...
Compiling './lib/python3.5/site-packages/Products/CacheSetup/content/base_cache_rule.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/content/base_cache_rule.py", line 205
    except CompilerError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CacheSetup/content/header_set.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/content/header_set.py", line 349
    except CompilerError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CacheSetup/enabler.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/enabler.py", line 22
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CacheSetup/exportimport'...
Compiling './lib/python3.5/site-packages/Products/CacheSetup/patch_cmf.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/patch_cmf.py", line 85
    raise PTRuntimeError, (
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CacheSetup/patch_utils.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/patch_utils.py", line 36
    raise ValueError, ('Trying to unwrap non-wrapped '
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CacheSetup/profiles'...
Listing './lib/python3.5/site-packages/Products/CacheSetup/profiles/default'...
Listing './lib/python3.5/site-packages/Products/CacheSetup/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/CacheSetup/skins'...
Listing './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup'...
Compiling './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/cache_policy_redirect.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/cache_policy_redirect.py", line 15
    return ct.setDisplayPolicy(policy_id, camefrom=camefrom, redirect=True)
                                                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/enableHTTPCompression.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/enableHTTPCompression.py", line 23
    return '<!-- compression status: disabled -->'
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getFolderButtons.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getFolderButtons.py", line 22
    return actions
                 ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getHeaderSetIdForResource.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getHeaderSetIdForResource.py", line 16
    return None
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getImageAndFilePurgeUrls.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getImageAndFilePurgeUrls.py", line 11
    return []
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getUncataloguedFolderContents.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/getUncataloguedFolderContents.py", line 17
    return batch
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/rewritePurgeUrls.py'...
***   File "./lib/python3.5/site-packages/Products/CacheSetup/skins/cache_setup/rewritePurgeUrls.py", line 65
    return rewrite_legacy(relative_urls, domains)
                                                ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/CacheSetup/tests'...
Listing './lib/python3.5/site-packages/Products/CacheSetup/tests/unused'...
Listing './lib/python3.5/site-packages/Products/CacheSetup/utils'...
Listing './lib/python3.5/site-packages/Products/PageCacheManager'...
Listing './lib/python3.5/site-packages/Products/PageCacheManager/www'...
Listing './lib/python3.5/site-packages/Products/PolicyHTTPCacheManager'...
Listing './lib/python3.5/site-packages/Products/PolicyHTTPCacheManager/dtml'...
Listing './lib/python3.5/site-packages/Products/PolicyHTTPCacheManager/tests'...
Compiling './lib/python3.5/site-packages/Products/PolicyHTTPCacheManager/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/PolicyHTTPCacheManager/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.CMFSquidTool-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/Products.CacheSetup-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/Products.PageCacheManager-1.2.egg-info'...
Listing './lib/python3.5/site-packages/Products.PolicyHTTPCacheManager-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
